--- a/css/resume.css
+++ b/css/resume.css
@@ -7,6 +7,8 @@
 
     -webkit-justify-content: center;
     justify-content: center;
+
+    width: 1100px;
 }
 
 
@@ -20,7 +22,7 @@
     -webkit-align-items: center;
     align-items: center;
 
-    width: 300px;
+    min-width: 300px;
 }
 
 .resume {
